--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.Account.RegisterActivity"></activity>
+        <activity android:name=".View.Account.EditProfileActivity"></activity>
+        <activity android:name=".View.Account.RegisterActivity" />
         <activity android:name=".View.Account.j" />
         <activity android:name=".View.Catogory.CatogoryActivity" />
         <activity android:name=".View.ReadActivity" />
